--- a/src/static/index.html
+++ b/src/static/index.html
@@ -185,7 +185,7 @@
           </div>
           <div class="modal-footer">
             <a href="#" class="btn" data-toggle="modal" data-target="#firmware-upload-dialog" data-bind="css: { disabled: arduinoFirmwareVM.inProgress() }, visible: ! arduinoFirmwareVM.arduinoUploaded()">Cancel</a>
-            <a href="#" class="btn btn-primary" id="arduinoFirmware-startupload" data-bind="css: { disabled: arduinoFirmwareVM.inProgress() }, visible: ! arduinoFirmwareVM.arduinoUploaded()">Apply new firmware</a>
+            <a href="#" class="btn btn-primary" id="arduinoFirmware-startupload" data-bind="visible: ! arduinoFirmwareVM.arduinoUploaded()">Apply new firmware</a>
             <a href="#" class="btn btn-primary" id="arduinoFirmware-closeupload" data-toggle="modal" data-target="#firmware-upload-dialog" data-bind="visible: arduinoFirmwareVM.arduinoUploaded()">Close</a>
           </div>
         </div>
@@ -301,9 +301,14 @@
               viewmodel.arduinoFirmwareVM.selectedFile(selectedFile);
             });
             $("#arduinoFirmware-startupload").click(function() {
-              fileReader.onload = function(evnt){
+              fileReader.onload = function(evnt) {
                 console.log("Upload event: " + selectedFile.name)
-                socket.emit('arduinofirmware-upload', { 'filename' : selectedFile.name, data : evnt.target.result });
+                socket.emit('arduinofirmware-upload', { 'filename' : selectedFile.name, data : evnt.target.result });                
+              }
+              if (!selectedFile) {
+                selectedFile = new Object(); 
+                selectedFile.name = 'fromSource';
+                socket.emit('arduinofirmware-uploadfromsource');
               }
               console.log("Starting upload: " + selectedFile.name)
               socket.emit('arduinofirmware-startupload', { 'filename' : selectedFile.name, 'size' : selectedFile.size });
