Applied #83 code review comments

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div id="keyboard" class="controller well well-small" >
                     <img src="themes/OpenROV/img/keyboard.png" class="center">
-                    <p>Use the <i>Up</i>, <i>Down</i>, <i>Left</i>, <i>Right</i>, <i>Shift</i> and <i>Ctrl</i> keys to maneuver. Use <i>1</i>-<i>5</i> to set power. <i>[</i> and <i>]</i> to trim thrust. Space for all stop.</p>
+                    <p>Use the <i>Up</i>, <i>Down</i>, <i>Left</i>, <i>Right</i>, <i>Shift</i> and <i>Ctrl</i> keys to maneuver. Use <i>1</i>-<i>5</i> to set power. <i>9</i> and <i>0</i> to trim thrust. Space for all stop.</p>
                 </div>
                 <div id="servoTilt" class="controller well well-small" >
                     <p>Servo Tilt: <img src="themes/OpenROV/img/servo_tilt.png" data-bind="attr: {style: servoTiltStyle}" class="center"></p>
