--- a/src/static/index.html
+++ b/src/static/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div id="keyboard" class="controller well well-small" >
                     <img src="themes/OpenROV/img/keyboard.png" class="center">
-                    <p>Use the <i>Up</i>, <i>Down</i>, <i>Left</i>, <i>Right</i>, <i>Shift</i> and <i>Ctrl</i> keys to maneuver. Use <i>1</i>-<i>5</i> to set power. <i>9</i> and <i>0</i> to trim thrust. Space for all stop.</p>
+                    <p>Use the <i>Up</i>, <i>Down</i>, <i>Left</i>, <i>Right</i>, <i>Shift</i> and <i>Ctrl</i> keys to maneuver. Use <i>1</i>-<i>5</i> to set power. <i>7</i>,<i>8</i> (lift) and <i>9</i>,<i>0</i> (thrust) trim. Space for all stop.</p>
                 </div>
                 <div id="servoTilt" class="controller well well-small" >
                     <p>Servo Tilt: <img src="themes/OpenROV/img/servo_tilt.png" data-bind="attr: {style: servoTiltStyle}" class="center"></p>
@@ -52,7 +52,7 @@
                 <div id="lights" class="controller well well-small" >
                     <p><div id="brightnessIndicator" data-bind="attr: {class: brightnessClass}"></div></p>
                     <p>Brightness: <span data-bind="text: currentBrightness()*10">0</span>%</p>
-                    <p>Use <i>+</i>, <i>-</i> to increase brightness of lights.</p>
+                    <p>Use <i>o</i>, <i>p</i> to increase brightness of lights.</p>
                 </div>
                 <div id="telemetry" class="well well-small" >
 		    <ul data-bind="foreach: rawTelemetry">
