Added HTML5-JavaScript-Gamepad-Controller-Library for broader gamepad support. Altered it to support the Standard Direct Gamepads.  Changed the trims to lock in the current lift and thrust values when the RB button is pressed.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -239,6 +239,7 @@
         <script type='text/javascript' src="js/libs/bootstrap.min.js"></script>
         <script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
         <script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>
+	<script type='text/javascript' src='js/libs/gamepad.js'></script>
         <script type='text/javascript' src='js/utilities.js'></script>
         <script type='text/javascript' src='js/ArduinoFirmwareViewModel.js'></script>
         <script type='text/javascript' src='js/OpenRovViewModel.js'></script>
