ROV will report current IP via Google Talk.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -150,7 +150,15 @@
 		      <label class="control-label" for="smoothingIncriment">Motor Response Aggressivness:</label>
 		      <input type="text" data-bind="value: smoothingIncriment" />
 		      <div class="controls" data-bind="slider: smoothingIncriment, sliderOptions: { min: 1, max: 50, step: 1}"></div>
-		  </div>	    
+		  </div>
+		  <div class="control-group">
+		      <label class="control-label" for="google-talk-id">Google Talk ROV ID:</label>
+		      <input type="text" data-bind="value: googleTalkROVid" />
+		      <label class="control-label" for="google-talk-password">Google Talk ROV Password:</label>
+		      <input type="text" data-bind="value: googleTalkROVpassword" />
+		      <label class="control-label" for="google-talk-pilot-id">Google Talk Pilot ID:</label>
+		      <input type="text" data-bind="value: googleTalkPilotId" />
+		  </div>
 	    </div>
           </div>
         </div>
@@ -278,19 +286,27 @@
                settings 
             */
             var options = {};
+	    var keyboard = null;
             $("#show-settings").click(function() { 
               $("#settings").show('fold');
+	      viewmodel.sendUpdateEnabled(false);
               Mousetrap.bind('esc', hideSettings);
+	      keyboard.unbindKeys();
             });
 
             $("#settings .back-button").click(function() {
               hideSettings();
 	      sendUpdateSettingMessage(socket,{smoothingIncriment:viewmodel.smoothingIncriment()});
+	      sendUpdateSettingMessage(socket,{googletalk_rovid:viewmodel.googleTalkROVid()});
+	      sendUpdateSettingMessage(socket,{googletalk_rovpassword:viewmodel.googleTalkROVpassword()});
+	      sendUpdateSettingMessage(socket,{googletalk_rov_pilotid:viewmodel.googleTalkPilotId()});
             });	    
 
             function hideSettings() {
               $("#settings").hide('fold');
+	      viewmodel.sendUpdateEnabled(true);
               Mousetrap.unbind('esc');
+	      keyboard.bindKeys()
             }
 	    
               /* ------------------------------------------
@@ -406,6 +422,7 @@
             */
             var gp = new GamePad();
             var kp = new KeyPad();
+	    keyboard = kp;
             var controller = kp;
 	    
 	    var detectcontroller = function(){
