--- a/src/static/index.html
+++ b/src/static/index.html
@@ -177,6 +177,8 @@
                         <div id="portMotorSpeed"></div>
                     </div>
                 </div>
+		<label class="control-label" for="reverse-port-thruster">Reverse Port Thruster</label>
+		<input type="checkbox" data-bind="checked: reversePortThruster" />
                 <div class="control-group invisible-field">
                     <label class="control-label" for="starbordMotorSpeed">Starboard Motor</label>
                     <input type="text" id="starbordMotorSpeedVal"/>
@@ -184,6 +186,8 @@
                         <div id="starbordMotorSpeed"></div>
                     </div>
                 </div>
+		<label class="control-label" for="reverse-starbord-thruster">Reverse Starbord Thruster</label>
+		<input type="checkbox" data-bind="checked: reverseStarbordThruster" />		
                 <div class="control-group invisible-field">
                     <label class="control-label" for="verticalMotorSpeedVal">Vertical Motor</label>
                     <input type="text" id="verticalMotorSpeedVal"/>
@@ -191,6 +195,8 @@
                         <div id="verticalMotorSpeed"></div>
                     </div>
                 </div>
+		<label class="control-label" for="reverse-lift-thruster">Reverse Verticle Thruster</label>
+		<input type="checkbox" data-bind="checked: reverseLiftThruster" />		
 	        <h4>Runtime Settings:</h4>
 	          <div class="control-group invisible-field">
 		      <label class="control-label" for="deadzone">DeadZone</label><br>min:
@@ -339,6 +345,9 @@
                   hideDiagnostic();
 		  sendUpdateSettingMessage(socket,{deadzone_pos:viewmodel.deadzone_pos()});
 		  sendUpdateSettingMessage(socket,{deadzone_neg:viewmodel.deadzone_neg()});
+		  sendUpdateSettingMessage(socket,{reverse_port_thruster:viewmodel.reversePortThruster()});
+		  sendUpdateSettingMessage(socket,{reverse_starbord_thruster:viewmodel.reverseStarbordThruster()});
+		  sendUpdateSettingMessage(socket,{reverse_lift_thruster:viewmodel.reverseLiftThruster()});
               });    
 	      
               function hideDiagnostic() {
