--- a/src/static/index.html
+++ b/src/static/index.html
@@ -260,11 +260,15 @@
         <script type='text/javascript' src="js/gamepad.js"></script>
         <script type='text/javascript' src="js/keypad.js"></script>
         <script type='text/javascript' src="js/frame.js"></script>
-	<script type='text/javascript' src="js/cockpit.js"></script>						
-	<script type='text/javascript' src="js/compass.js"></script>
+	<script type='text/javascript' src="js/cockpit.js"></script>
+	<!--script type='text/javascript' src="js/compass.js"></script-->
 	<script type='text/javascript' src="js/horizon.js"></script>
         <script src="/config.js"></script>
-		<script src="/socket.io/socket.io.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
+
+	<script> //Load conditional js files
+	  
+	</script>
 
         <script>
       		var viewmodel;
@@ -284,6 +288,14 @@
 	    socket.on('photos-updated', function(data) {
 	      console.log('got new photos');
 	      viewmodel.updatePhotos(data);
+	    })
+	    socket.on('rovsys', function(data) {
+	      console.log('got rovsys update');
+	      viewmodel.updateRovsys(data);
+	      if (viewmodel.capabilities()>>COMPASS_CAPABLE & 1) {
+		$.getScript("js/compass.js",function() {cockpit.loadPlugins();});		
+		console.log("Compass code loaded");
+	      }
 	    })
 
 	    $("#capture-photo").click(function(){
@@ -534,7 +546,8 @@
             socket.on('arduinoFirmware-output', function(data){
               viewmodel.arduinoFirmwareVM.logOutput(data);
             });
-
+	    
+	    //plugin hooks
             setupFrameHandling(socket);
 	   var cockpit = new Cockpit(socket);
           });
