--- a/src/static/index.html
+++ b/src/static/index.html
@@ -428,6 +428,7 @@
               }
               console.log("Starting upload: " + selectedFile.name)
               socket.emit('arduinofirmware-startupload', { 'filename' : selectedFile.name, 'size' : selectedFile.size });
+	      selectedFile = null;
             });
             $('#arduinoFirmware-closeupload').click(function() {
               viewmodel.arduinoFirmwareVM.reset();
