--- a/src/static/index.html
+++ b/src/static/index.html
@@ -169,6 +169,11 @@
             <div class="settings-block">
                 <h4>Pre-Flight Check</h4>
             </div>
+	    <div class="settings-block">
+	      <h4>Callibration</h4>
+	      <a href="#" class="btn" id="callibrate_compass">Callibrate Compass</a>
+	      <a href="#" class="btn" id="zero_depth">Zero Depth</a>	      
+	    </div>
             <div class="settings-block">
                 <h4>Manually test motors</h4>
                 <div class="control-group invisible-field">
