--- a/src/static/index.html
+++ b/src/static/index.html
@@ -57,6 +57,7 @@
                     <p><div id="brightnessIndicator" data-bind="attr: {class: brightnessClass}"></div></p>
                     <p>Brightness: <span data-bind="text: currentBrightness()*10">0</span>%</p>
                     <p>Use <i>o</i>, <i>p</i> to increase brightness of lights.</p>
+		    <p>Use <i>l</i> to toggle callibration lasers.</p>
                 </div>
                 <div id="telemetry" class="controller well well-small" >
 
@@ -484,6 +485,10 @@
                 viewmodel.updateBrightness(value);
                 socket.emit('brightness_update',viewmodel.currentBrightness());
             });
+	    
+            kp.bindLasers(function (value){
+                socket.emit('laser_update');
+            });	    
 	    
             gp.bindBrightness(function (value){
                 viewmodel.updateBrightness(value);
