Adding keyboard toggle function for brightness

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -56,7 +56,8 @@
                 <div id="lights" class="controller well well-small" >
                     <p><div id="brightnessIndicator" data-bind="attr: {class: brightnessClass}"></div></p>
                     <p>Brightness: <span data-bind="text: currentBrightness()*10">0</span>%</p>
-                    <p>Use <i>o</i>, <i>p</i> to increase brightness of lights.</p>
+                    <p>Use <i>o</i>, <i>p</i> to increase brightness of lights.<br>
+                      Use <i>l</i> to toggle lights on/off.</p>
                 </div>
                 <div id="telemetry" class="controller well well-small" >
 
