Fixing problem with starbord motor control and logger reference in Hardware.js

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -200,7 +200,7 @@
                     <div  class="text-center">
                       <div  data-bind="foreach: diagnosticMotorSpeedButtons">
                         <button class="btn" type="button" data-bind="text: $data, 
-                        click: function(data, event) { $parent.setMotorTestSpeed('starboardMotorSpeed', $data)}"></button>
+                        click: function(data, event) { $parent.setMotorTestSpeed('starbordMotorSpeed', $data)}"></button>
                       </div>
 
                       <label class="" for="reverse-starbord-thruster"><input type="checkbox" data-bind="checked: reverseStarbordThruster" />
