--- a/src/static/index.html
+++ b/src/static/index.html
@@ -268,6 +268,8 @@
         <script type='text/javascript' src="js/frame.js"></script>
 	<script type='text/javascript' src="js/cockpit.js"></script>
 	<!--script type='text/javascript' src="js/compass.js"></script-->
+	<script src='js/libs/db.js'></script>
+	<script type='text/javascript' src="js/blackbox.js"></script>
 	<script type='text/javascript' src="js/horizon.js"></script>
         <script src="/config.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
