--- a/src/static/index.html
+++ b/src/static/index.html
@@ -11,7 +11,7 @@
   <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
           <div class="navbar-inner">
-            <div class="container-fluid">
+            <div id="menu" class="container-fluid">
               <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -493,12 +493,13 @@
 	    detectcontroller();
 
             kp.bindServoTilt(function (value){
-                viewmodel.currentTiltPosition(value);
+               // viewmodel.currentTiltPosition(value);
+
                 socket.emit('tilt_update',value);
             });
             
 	    gp.bindServoTilt(function (value){
-                viewmodel.currentTiltPosition(value);
+                //viewmodel.currentTiltPosition(value);
                 socket.emit('tilt_update',value);
             });
 	    
