Fixing additional merge issues

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -57,8 +57,8 @@
                     <p><div id="brightnessIndicator" data-bind="attr: {class: brightnessClass}"></div></p>
                     <p>Brightness: <span data-bind="text: currentBrightness()*10">0</span>%</p>
                     <p>Use <i>o</i>, <i>p</i> to increase brightness of lights.<br>
-                      Use <i>i</i> to toggle lights on/off.</p>
-                      <p>Use <i>l</i> to toggle callibration lasers.</p>
+                      Use <i>i</i> to toggle lights on/off.<br>
+                      Use <i>l</i> to toggle callibration lasers.</p>
                 </div>
                 <div id="telemetry" class="controller well well-small" >
 
