--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -45,13 +45,16 @@ function autoResize(id){
             scripts.push('../plugins/capestatus/public/js/capestatus.js');
             scripts.push('../plugins/rovpilot/public/js/rovpilot.js');
             scripts.push('../plugins/motor_diags/public/js/motor_diags.js');
+            scripts.push('../plugins/touchcontroller/public/js/gamecontroller.min.js');
+            scripts.push('../plugins/touchcontroller/public/js/touchcontroller.js');
+
             
             frameDoc.writeln(new EJS({url: '../views/index.ejs'}).render({title: "testing", styles:{}, scripts:scripts}));
             frameDoc.close();        
             //autoResize(iframe);
 
-           iframe.height= "768px";
-           iframe.width= "1024px";            
+           iframe.height= "720px";
+           iframe.width= "1280px";            
        // new EJS({url: 'views/index.ejs'}).update('test', {title: "testing", styles:{}, scripts:{}});
     </script>
 
