More mobile tweaks

--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -57,7 +57,7 @@ function autoResize(id){
             //autoResize(iframe);
 
            iframe.height= "720px";
-           iframe.width= "1280px";            
+           iframe.width= "900px"; // "1280px";            
        // new EJS({url: 'views/index.ejs'}).update('test', {title: "testing", styles:{}, scripts:{}});
     </script>
 
