--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -56,8 +56,8 @@ function autoResize(id){
             frameDoc.close();
             //autoResize(iframe);
 
-           iframe.height= "720px";
-           iframe.width= "901px"; // "1280px";
+           iframe.height= "720px"; //360px";
+           iframe.width= "1280px";//"567px"; // 
        // new EJS({url: 'views/index.ejs'}).update('test', {title: "testing", styles:{}, scripts:{}});
     </script>
 
