Moved everything else in to the plugin folder. Verified they load correctly.

--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -42,8 +42,16 @@ function autoResize(id){
             frameDoc.open();
             var scripts = [];
        //     scripts.push('../lib/config.js');
+            scripts.push('../plugins/arduinofirmwareupload/public/js/arduinofirmwareupload.js');
+            scripts.push('../plugins/blackbox/public/js/blackbox.js');
             scripts.push('../plugins/capestatus/public/js/capestatus.js');
+            scripts.push('../plugins/compass/public/js/compass.js');
+            scripts.push('../plugins/fpscounter/public/js/fpscounter.js');
+            scripts.push('../plugins/googletalk_ipregistration/public/js/googletalk_ipregistration.js');
+            scripts.push('../plugins/horizon/public/js/horizon.js');
+            scripts.push('../plugins/photocapture/public/js/photocapture.js');
             scripts.push('../plugins/rovpilot/public/js/rovpilot.js');
+            scripts.push('../plugins/telemetry/public/js/telemetry.js');
             scripts.push('../plugins/motor_diags/public/js/motor_diags.js');
            // scripts.push('../plugins/touchcontroller/public/js/gamecontroller.js');
             scripts.push('../plugins/touchcontroller/public/js/touchcontroller.js');
